# latent-model-recreation

./: .env.example  .gitignore  MiniProjectAI-Group2.pptx  README.md  flake.nix  load_dataset_pretrain.py  pyproject.toml
Intro to AI report/: main.tex  metadata.tex  reportSty.sty
Intro to AI report/chapters/: discussion.tex  introduction.tex  methodology.tex  results.tex
Intro to AI report/figs/: graph_sample.tex
Intro to AI report/front/: abstract.tex  cover.tex  declaration.tex
Intro to AI report/tables/: recurrence_results.tex  sample_table.tex
evaluation/: recurrence_evaluation.csv  training_loss.csv
report/: bib.bib  report.md
src/: count_params.py  data.py  load_dataset_pretrain.py  main.py  model.py  random_utils.py  test.py  train.py
