[project]
name = "latent-model-recreation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "python-dotenv>=1.1.0",
    "transformers>=4.51.3",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0", "torchvision>=0.21.0"]
cu118 = ["torch>=2.6.0", "torchvision>=0.21.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu118" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
